# lejaren

./: .gitignore  Procfile  README.md  pyproject.toml  requirements.txt
.github/workflows/: ci.yml
app/: main.py
app/pages/: autotranscriber.py  hello_world.py  tutorial_2.py  tutorial_3.py  tutorial_4.py  tutorial_5.py
lejaren/: __init__.py  log.py
lejaren/analysis/: AutoTranscribe.py  Node.py  PhraseNode.py  PhraseTree.py  PitchClassSet.py  RhythmTree.py  Tree.py  __init__.py  hyperbeat.py  meterNode.py
lejaren/composition/: __init__.py  riemann.py  voice.py
lejaren/conversion/: conversion_values.py
lejaren/intake/: import_musicxml.py  import_notes.py
lejaren/notation/: __init__.py  beat.py  chord.py  measure.py  note.py  part.py  rest.py  score.py  tempo.py
tests/: conftest.py  test_chord.py  test_conversion_values.py  test_import.py  test_import_notes.py  test_measure.py  test_measure_beaming.py  test_note.py  test_part.py  test_pcset.py  test_placeholder.py  test_rest.py  test_score.py  test_tempo.py  test_transcribe.py
tests/output/: test_score_fj.musicxml  test_score_fj_34.musicxml  test_score_fj_only_quarter.musicxml  test_score_fj_shifting.musicxml  test_score_fj_subdiv.xml  test_score_long.xml
tests/test_files/: test_treble_middle_c.musicxml  test_treble_middle_c.mxl  test_treble_middle_c_full_score.musicxml  test_treble_middle_c_full_score.mxl
