[tool.poetry]
name = "lejaren"
version = "0.0.1"
description = "Computer-Aided Musical Prototyping using Python"
authors = ["Aaron Stepp <stepp.aaron@gmail.com>"]
license = "GPL-3.0-only"

[tool.poetry.dependencies]
python = ">=3.7,<4.0"
lxml = "6.0.2"
numpy = "2.3.4"
scipy = "^1.16.3"
matplotlib = "^3.4.2"

[tool.poetry.dev-dependencies]
pytest = "*"
isort = "^5.9.3"


[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
