[tool.poetry]
name = "lejaren"
version = "0.0.1"
description = "Computer-Aided Musical Prototyping using Python"
authors = ["Aaron Stepp <stepp.aaron@gmail.com>"]
license = "GPL-3.0-only"

[tool.poetry.dependencies]
python = ">=3.11,<4.0"
lxml = "^4.6.2"
numpy = "^1.18.1"
scipy = "^1.4.1"

[tool.poetry.dev-dependencies]
pytest = "*"


[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
