[tool.poetry]
name = "lejaren"
version = "0.0.1"
description = "Computer-Aided Musical Prototyping using Python"
authors = ["Aaron Stepp <stepp.aaron@gmail.com>"]
license = "GPL-3.0-only"

[tool.poetry.dependencies]
python = ">=3.12,<4.0"
lxml = "^6.0.0"
numpy = "^2.4.0"
scipy = "^1.18.0"

[tool.poetry.dev-dependencies]
pytest = "*"


[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
